# api/controllers/password.js
@@ -1,7 +1,7 @@
 "use strict";
 
 const db = require('sentinel-common').db;
-const collection = db.createCollection('auth');
+//const collection = db.createCollection('auth');
 
 module.exports.resetPassword = (req, res) => {
 
